# SmartWorkmate

./: .gitignore  MEMORY.md  README.md  algo.py  gui.py  pyproject.toml  start-smartworkmate.bat  start-smartworkmate.ps1
.github/workflows/: task-poller.yml
.smartworkmate/: config.example.yaml
docs/tasks/: README.md  TASK-2026-002-reliability-hardening.md  TEMPLATE.md
docs/tasks/examples/: TASK-0001-sample.md
smartworkmate/: __init__.py  acceptance.py  auto_runner.py  cli.py  models.py  orchestrator.py  proactive.py  runtime_guard.py  setup.py  state_store.py  status_sync.py  task_lint.py  task_loader.py  web_gui.py
smartworkmate/acceptance_spec/: __init__.py  ast.py  builtins.py  cli.py  ir.py  lexer.py  parser.py  pytest_codegen.py  pytest_runner.py  reporting.py  semantic.py  verdict_schema.py
smartworkmate/kimaki/: __init__.py  kimaki.py  models.py  tools.py
smartworkmate/opencode/: __init__.py  models.py  opencode.py  tools.py
tests/: test_cli.py  test_codegen.py  test_fin_marker.py  test_kimaki.py  test_opencode.py  test_parser.py  test_proactive.py  test_reporting.py  test_runtime_guard.py  test_semantic.py  test_task_document_parsing.py  test_task_parsing_and_session_detection.py
webui/: index.html  package-lock.json  package.json
webui/src/: App.vue  main.js  styles.css
