[project]
name = "smartworkmate"
version = "0.1.0"
description = "Autonomous worktree + PR task runner for opencode and kimaki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flet>=0.27.6",
  "PyYAML>=6.0.1",
]

[project.scripts]
smartworkmate = "smartworkmate.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smartworkmate*"]
