[project]
name = "smartworkmate"
version = "0.1.0"
description = "Autonomous worktree + PR task runner for opencode and kimaki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "PyYAML>=6.0.1",
  "uvicorn>=0.35.0",
  "websockets>=15.0.0",
]

[project.scripts]
smartworkmate = "smartworkmate.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smartworkmate*"]
